--- a/index.html
+++ b/index.html
@@ -9,10 +9,29 @@
       body {
         margin: 0;
       }
+
+      #status-text {
+        font-family: sans-serif;
+        color: white;
+      }
+
+      #ui {
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 60px;
+        padding: 8px;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     </style>
   </head>
   <body>
     <div id="app"></div>
+    <div id="ui">
+      <div id="status-text">Hello, world!</div>
+      <div id="actions"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
